# NoSQLDatabase

./: .gitignore  Authors  CMakeLists.txt  Data  Data.txt  README.md  launchClient.bat  launchServer.bat  main.cpp
nbproj_mac/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproj_mac/nbproject/private/: configurations.xml  private.xml
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: CMakeLists.txt  CTestTestfile.cmake  main.cpp  main.h
src/Connection/: CMakeLists.txt  Connection.cpp  Connection.h
src/Item/: CMakeLists.txt  Item.cpp  Item.h
src/KeyValueStore/: CMakeLists.txt  KeyValueStore.cpp  KeyValueStore.h
src/NoSQLStore/: CMakeLists.txt  NoSQLStore.cpp  NoSQLStore.h
src/ipc/: CMakeLists.txt  ipc.cpp  ipc.hpp
src/tests/: NoSQLDataBaseTest.cpp  newcunittest.c  newsimpletest.cpp
